# meridian

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
cmake/: FindCodec2.cmake  FindLibSodium.cmake
docs/: getting_started.md
examples/: CMakeLists.txt  mesh_test.c  voice_chat.c
include/: audio.h  mesh.h  packet.h  platform.h  radio.h  radio_config.h  rtc.h  security.h
src/: CMakeLists.txt  audio.c  mesh.c  packet.c  platform.c  radio.c  radio_config.c  rtc.c  security.c
tests/: CMakeLists.txt  test_packet.c  test_radio_config.c  test_security.c
